syntax = "proto3";
option java_multiple_files = true;
package ds.trading.system.grpc.generated;

message StockOrderRequest {
  string traderId = 1;
  string orderSymbol = 2;
  double stockPrice = 100;
  int32 stockQuantity = 10;
  string orderType = 3;
  bool isSentByPrimary = 4;
}
message StockOrderResponse {
  string traderId = 1;
  string orderSymbol = 2;
  double stockPrice = 100;
  int32 stockQuantity = 10;
  string orderType = 3;
  bool orderStatus = 4;
}
service StockOrderService {
  rpc stockOrder(StockOrderRequest) returns (StockOrderResponse);
}
